# modorganizer-installer_fomod

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  fomodinstallerdialog.cpp  fomodinstallerdialog.h  fomodscreenshotdialog.cpp  fomodscreenshotdialog.h  installer_fomod_en.ts  installerfomod.cpp  installerfomod.h  scalelabel.cpp  xmlreader.cpp  xmlreader.h
src/linux/: fomodinstallerdialog_linux.cpp
src/win32/: fomodinstallerdialog_win32.cpp
